# pricy

./: .gitignore  Cargo.toml  README.md  example.toml
src/: config.rs  email.rs  error.rs  main.rs
